--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "loginUiReanimated",
-    "slug": "loginUiReanimated"
+    "name": "loginRegisterUI",
+    "slug": "loginRegisterUI"
   }
 }
