--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.24",
     "@types/react": "~18.2.45",
-    "expo": "^50.0.1",
+    "expo": "^50.0.14",
+    "expo-checkbox": "^2.7.0",
+    "expo-linear-gradient": "^12.7.2",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.73.4",
+    "react-native": "^0.73.6",
+    "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-input-select": "^1.3.5",
+    "react-native-keyboard": "^2.0.1",
     "react-native-reanimated": "~3.6.0",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
-    "react-native-web": "~0.19.6",
+    "react-native-select-dropdown": "^3.4.0",
     "twrnc": "^4.1.0",
     "typescript": "^5.3.0"
   },
@@ -21,7 +26,7 @@
     "@babel/core": "^7.19.3",
     "tailwindcss": "^3.3.2"
   },
-  "name": "loginuireanimated",
+  "name": "loginRegisterUI",
   "version": "1.0.0",
   "private": true,
   "scripts": {
